# opg-incident-response

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile.nginx  Dockerfile.ngrok  Dockerfile.response  Dockerfile.tests  Makefile  README.md  docker-compose.yml  env.dev.example  env.prod.example  manage.py  pyproject.toml  pytest.ini  renovate.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run-tests.sh  startup.sh
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: _build.yml  _deploy.yml  _smoke.yml  _test.yml  build_containers.yml  deploy.yml  publish_docs.yml  scanner.yml  terraform.yml  terraform_master.yml  terraform_pull_request.yml  workflow_path_to_live.yml  workflow_pull_request_path.yml
docs/config/: tech-docs.yml
docs/source/: index.html.md.erb
docs/source/documentation/: index.html.md.erb
nginx/: default.conf.template  nginx.conf
nginx/assets/: main.js  main.scss  package-lock.json  package.json
nginx/assets/src/: action.js  all.js  load-classes.js
nginx/assets/src/lib/: nodeListForEach.js
nginx/etc/confd/conf.d/: nginx.toml
nginx/etc/confd/templates/: default.conf.tmpl
nginx/webpack/: main.js  main.scss  package.json  webpack.config.js
nginx/webpack/src/: action.js  all.js
nginx/webpack/src/lib/: api.js
opgincidentresponse/: models.py  urls.py  views.py  wsgi.py
opgincidentresponse/actions/: headline_actions.py  incident_commands.py  incident_notifications.py  keyword_handlers.py  pagerduty.py  statuspage.py
opgincidentresponse/migrations/: 0001_initial.py  0002_pagerdutyspecialist.py
opgincidentresponse/settings/: aws-dev.py  base.py  dev.py  prod.py
opgincidentresponse/static/govuk/: govuk-frontend-3.9.1.min.css
opgincidentresponse/templates/: govuk_base.html  incident.html  index.html
opgincidentresponse/templatetags/: opg_response.py
opgincidentresponse/tests/actions/: test_keyword_handlers.py
response/: README.md  urls.py
response/core/: urls.py  util.py
response/templatetags/: markdown_filter.py
terraform/: .terraform.lock.hcl  access_logs.tf  aurora.tf  aurora_serverless_v1.tf.tf  data_sources.tf  dns.tf  ecs-iam.tf  ecs-task-definition.tf  ecs.tf  loadbalancer.tf  secrets.tf  variables.tf  versions.tf
testcfg/: wsgi.py
testcfg/settings/: base.py  dev.py
tests/api/: test_actions.py  test_incidents.py  test_timeline.py
tests/factories/: incident.py
