[project]
name = "incident-response"
version = "1"
description = "Helping deal with incidents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.1",
    "beautifulsoup4==4.14.3",
    "bleach==3.3.1",
    "bleach-allowlist==1.0.3",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "cryptography==46.0.7",
    "defusedxml==0.7.1",
    "django==5.2.14",
    "django-after-response==0.2.2",
    "django-bootstrap4==25.3",
    "django-decorator-include==3.3",
    "django-health-check==3.24.0",
    "djangorestframework==3.15.2",
    "emoji-data-python==1.6.0",
    "gunicorn==23.0.0",
    "idna==3.15",
    "jsonfield==3.2.0",
    "markdown2==2.5.4",
    "oauthlib==3.3.1",
    "packaging==26.0",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.11",
    "pycparser==3.0",
    "pyjwt==2.12.1",
    "pypd==1.1.0",
    "python-dotenv==1.2.2",
    "python-slugify==8.0.4",
    "python3-openid==3.2.0",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "six==1.17.0",
    "slackclient==1.3.2",
    "social-auth-app-django==5.7.0",
    "social-auth-core==4.8.5",
    "soupsieve==2.8.3",
    "sqlparse==0.5.5",
    "text-unidecode==1.3",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "webencodings==0.5.1",
    "websocket-client==0.54.0",
]

[dependency-groups]
dev = [
    "asgiref==3.11.1",
    "attrs==26.1.0",
    "beautifulsoup4==4.14.3",
    "black==26.3.1",
    "bleach==3.3.1",
    "bleach-allowlist==1.0.3",
    "cached-property==1.5.2",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "colorama==0.4.6",
    "cryptography==46.0.7",
    "defusedxml==0.7.1",
    "django==5.2.14",
    "django-after-response==0.2.2",
    "django-bootstrap4==25.3",
    "django-decorator-include==3.3",
    "django-health-check==3.24.0",
    "djangorestframework==3.15.2",
    "docopt==0.6.2",
    "emoji-data-python==1.6.0",
    "factory-boy==3.3.3",
    "faker==40.13.0",
    "flake8==3.9.2",
    "flake8-black==0.4.0",
    "flake8-bugbear==19.8.0",
    "flake8-builtins==1.5.3",
    "flake8-coding==1.3.2",
    "flake8-comprehensions==2.3.0",
    "flake8-debugger==3.2.1",
    "flake8-isort==2.9.1",
    "flake8-mutable==1.2.0",
    "flake8-pep3101==1.3.0",
    "flake8-tidy-imports==2.0.0",
    "flake8-tuple==0.4.1",
    "gunicorn==23.0.0",
    "idna==3.15",
    "iniconfig==2.3.0",
    "isort==4.3.21",
    "jsonfield==3.2.0",
    "markdown2==2.5.4",
    "mccabe==0.6.1",
    "mypy-extensions==1.1.0",
    "oauthlib==3.3.1",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pep8==1.7.1",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.11",
    "pycodestyle==2.7.0",
    "pycparser==3.0",
    "pyflakes==2.3.1",
    "pygments==2.20.0",
    "pyjwt==2.12.1",
    "pypd==1.1.0",
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "pytest-env==0.8.2",
    "pytest-mock==3.15.1",
    "pytest-randomly==3.16.0",
    "pytest-sugar==1.1.1",
    "pytest-watch==4.2.0",
    "python-dotenv==1.2.2",
    "python-slugify==8.0.4",
    "python3-openid==3.2.0",
    "pytokens==0.4.1",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "six==1.17.0",
    "slackclient==1.3.2",
    "social-auth-app-django==5.7.0",
    "social-auth-core==4.8.5",
    "soupsieve==2.8.3",
    "sqlparse==0.5.5",
    "termcolor==3.3.0",
    "testfixtures==11.0.0",
    "text-unidecode==1.3",
    "toml==0.10.2",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "watchdog==6.0.0",
    "webencodings==0.5.1",
    "websocket-client==0.54.0",
]
