[project]
name = "opg-incident-response"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=2.7",
    "django==5.2.14",
    "django-after-response==0.2.2",
    "django-bootstrap4>=0.0.7",
    "django-decorator-include==3.3",
    "django-health-check==3.24.0",
    "djangorestframework>=3.15.2",
    "emoji-data-python==1.6.0",
    "gunicorn==23.0.0",
    "jsonfield>=2.0.2",
    "justhtml==2.2.0",
    "psycopg2-binary==2.9.11",
    "pypd==1.1.0",
    "python-dotenv==1.2.2",
    "python-slugify>=1.2.6",
    "slackclient>=1.3,<2",
    "social-auth-app-django==5.7.0",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "factory-boy>=3.0.0",
    "faker>=2.0.0",
    "flake8==7.3.0",
    "flake8-black==0.4.0",
    "flake8-bugbear==25.11.29",
    "flake8-builtins==3.1.0",
    "flake8-coding==1.3.2",
    "flake8-comprehensions==3.17.0",
    "flake8-debugger==4.1.2",
    "flake8-isort==7.0.0",
    "flake8-mutable==1.2.0",
    "flake8-pep3101==3.0.0",
    "flake8-tidy-imports==4.12.0",
    "flake8-tuple==0.4.1",
    "isort==8.0.1",
    "pep8==1.7.1",
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "pytest-env==0.8.2",
    "pytest-mock==3.15.1",
    "pytest-randomly==3.16.0",
    "pytest-sugar==1.1.1",
    "pytest-watch==4.2.0",
]
